--- a/styles/markdown-styles.module.css
+++ b/styles/markdown-styles.module.css
@@ -5,24 +5,28 @@
 .reactMarkDown h1{
   margin-top: 1em;
   margin-bottom: 1em;
+  margin-left: 0.5em;
   font-weight: bold;
 }
 
 .reactMarkDown h2{
   margin-top: 1em;
   margin-bottom: 1em;
+  margin-left: 0.5em;
   font-weight: bold;
 }
 
 .reactMarkDown h3{
   margin-top: 1em;
   margin-bottom: 1em;
+  margin-left: 0.5em;
   font-weight: bold;
 }
 
 .reactMarkDown h4{
   margin-top: 1em;
   margin-bottom: 1em;
+  margin-left: 0.5em;
   font-weight: bold;
 }
 .reactMarkDown strong{
